apps/continuwuity/controller/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: continuwuity
  namespace: matrix
  labels:
    app.kubernetes.io/name: continuwuity
spec:
  replicas: 1
  serviceName: continuwuity
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app.kubernetes.io/name: continuwuity
  template:
    metadata:
      labels:
        app.kubernetes.io/name: continuwuity
    spec:
      securityContext:
        sysctls:
          - name: net.ipv4.ip_unprivileged_port_start
            value: "0"
      containers:
        - name: continuwuity
          # use a sha hash <3
          image: forgejo.ellis.link/continuwuation/continuwuity:v0.5.10
          command: ["/sbin/conduwuit"]
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - mountPath: /data
              name: data
              subPath: data
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
          resources:
            # Continuwuity might use quite some RAM :3
            requests:
              memory: "512Mi"
            limits:
              memory: "2048Mi"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: continuwuity-data
