apps/continuwuity/controller/service.yml
apiVersion: v1
kind: Service
metadata:
  name: continuwuity
  namespace: matrix
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: continuwuity
  type: ClusterIP
