apps/continuwuity/controller/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: continuwuity
  namespace: matrix
spec:
  ingressClassName: cloudflare
  rules:
  - host: matrix.frenchieandthegeek.com
    http:
      paths:
      - backend:
          service:
            name: continuwuity
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
